neo/cnvrhi/cnvrhi.h

void c_nvrhi_device_waitForIdle(nvrhi::IDevice* device);
void c_nvrhi_device_executeCommandList(
		nvrhi::IDevice* device,
		nvrhi::ICommandList* commandList);
void c_nvrhi_device_createHandleForNativeTexture(
		nvrhi::IDevice* device,
		nvrhi::TextureHandle* handle,
		nvrhi::ObjectType objectType,
		nvrhi::Object object,
		const nvrhi::TextureDesc* desc);
void c_nvrhi_device_createHandleForNativeBuffer(
		nvrhi::IDevice* device,
		nvrhi::BufferHandle* handle,
		nvrhi::ObjectType objectType,
		nvrhi::Object buffer,
		const nvrhi::BufferDesc* desc);
void c_nvrhi_device_createEventQuery(
		nvrhi::IDevice* device,
		nvrhi::EventQueryHandle* handle);
void c_nvrhi_device_setEventQuery(
		nvrhi::IDevice* device,
		nvrhi::IEventQuery* query,
		nvrhi::CommandQueue queue);
void c_nvrhi_device_createCommandList(
		nvrhi::IDevice* device,
		nvrhi::CommandListHandle* handle,
		nvrhi::CommandListParameters);
void c_nvrhi_device_createBuffer(
		nvrhi::IDevice* device,
		nvrhi::BufferHandle* handle,
		const nvrhi::BufferDesc* desc);
void c_nvrhi_device_createFramebuffer(
		nvrhi::IDevice* device,
		nvrhi::FramebufferHandle* handle,
		const nvrhi::FramebufferDesc* desc);
void c_nvrhi_device_createSampler(
		nvrhi::IDevice* device,
		nvrhi::SamplerHandle* handle,
		const nvrhi::SamplerDesc* desc);
void c_nvrhi_device_createTexture(
		nvrhi::IDevice* device,
		nvrhi::TextureHandle* handle,
		const nvrhi::TextureDesc* desc);
void c_nvrhi_device_createShader(
		nvrhi::IDevice* device,
		nvrhi::ShaderHandle* handle,
		const nvrhi::ShaderDesc* desc,
		const void* binary,
		size_t binarySize);
void c_nvrhi_device_createBindingLayout(
		nvrhi::IDevice* device,
		nvrhi::BindingLayoutHandle* handle,
		const nvrhi::BindingLayoutDesc* desc);
void c_nvrhi_device_createInputLayout(
		nvrhi::IDevice* device,
		nvrhi::InputLayoutHandle* handle,
		const nvrhi::VertexAttributeDesc* descs,
		uint32_t attributeCount,
		nvrhi::IShader* vertexShader);
void c_nvrhi_device_createBindingSet(
		nvrhi::IDevice* device,
		nvrhi::BindingSetHandle* handle,
		const nvrhi::BindingSetDesc* desc,
		nvrhi::IBindingLayout* layout);
void c_nvrhi_device_createGraphicsPipeline(
		nvrhi::IDevice* device,
		nvrhi::GraphicsPipelineHandle* handle,
		const nvrhi::GraphicsPipelineDesc* desc,
		nvrhi::IFramebuffer* framebuffer);
void c_nvrhi_device_runGarbageCollection(nvrhi::IDevice* device);
const nvrhi::BufferDesc* c_nvrhi_buffer_getDesc(const nvrhi::IBuffer* buffer);