neo/ztech/renderer/nvrhi.zig


    depthTestEnable: bool = true,
    depthWriteEnable: bool = true,
    depthFunc: ComparisonFunc = .Less,
    stencilEnable: bool = false,
    stencilReadMask: u8 = 0xff,
    stencilWriteMask: u8 = 0xff,
    stencilRefValue: u8 = 0,
    dynamicStencilRef: bool = false,
    frontFaceStencil: StencilOpDesc = .{},
    backFaceStencil: StencilOpDesc = .{},
};

pub const RasterFillMode = enum(u8) {
    Solid,
    Wireframe,

    pub const Fill = RasterFillMode.Solid;
    pub const Line = RasterFillMode.Wireframe;
};

pub const RasterCullMode = enum(u8) {
    Back,
    Front,
    None,
};

pub const RasterState = extern struct {
    fillMode: RasterFillMode = .Solid,
    cullMode: RasterCullMode = .Back,
    frontCounterClockwise: bool = false,
    depthClipEnable: bool = false,
    scissorEnable: bool = false,
    multisampleEnable: bool = false,
    antialiasedLineEnable: bool = false,
    depthBias: i32 = 0,
    depthBiasClamp: f32 = 0,
    slopeScaledDepthBias: f32 = 0,
    forcedSampleCount: u8 = 0,
    programmableSamplePositionsEnable: bool = false,
    conservativeRasterEnable: bool = false,
    quadFillEnable: bool = false,
    samplePositionsX: [16]u8 = std.mem.zeroes([16]u8),
    samplePositionsY: [16]u8 = std.mem.zeroes([16]u8),
};

pub const SinglePassStereoState = extern struct {
    enabled: bool = false,
    independentViewportMask: bool = false,
    renderTargetIndexOffset: u16 = 0,
};

pub const RenderState = extern struct {
    blendState: BlendState = .{},
    depthStencilState: DepthStencilState = .{},
    rasterState: RasterState = .{},
    singlePassStereo: SinglePassStereoState = .{},
};

pub const VertexBufferBinding = extern struct {
    buffer: ?*IBuffer = null,
    slot: u32,
    offset: u64,
};

pub const IndexBufferBinding = extern struct {
    buffer: ?*IBuffer = null,
    format: Format = .UNKNOWN,
    offset: u32 = 0,
};

pub const Rect = extern struct {
    minX: i32,
    maxX: i32,
    minY: i32,
    maxY: i32,

    pub fn fromViewport(viewport: *const Viewport) Rect {
        return .{
            .minX = @intFromFloat(@floor(viewport.minX)),
            .maxX = @intFromFloat(@ceil(viewport.maxX)),
            .minY = @intFromFloat(@floor(viewport.minY)),
            .maxY = @intFromFloat(@ceil(viewport.maxY)),
        };
    }
};

pub const ViewportState = extern struct {
    viewports: static_vector(Viewport, c_MaxViewports) = .{},
    scissorRects: static_vector(Rect, c_MaxViewports) = .{},
};

pub const GraphicsState = extern struct {
    pipeline: ?*IGraphicsPipeline = null,
    framebuffer: ?*IFramebuffer = null,
    viewport: ViewportState = .{},
    shadingRateState: VariableRateShadingState = .{},
    blendConstantColor: Color = .{},
    dynamicStencilRefValue: u8 = 0,
    bindings: static_vector(*IBindingSet, c_MaxBindingLayouts) = .{},
    vertexBuffers: static_vector(VertexBufferBinding, c_MaxVertexAttributes) = .{},
    indexBuffer: IndexBufferBinding = .{},
    indirectParams: ?*IBuffer = null,
};

pub const VariableShadingRate = enum(u8) {
    e1x1,
    e1x2,
    e2x1,
    e2x2,
    e2x4,
    e4x2,
    e4x4,
};

pub const ShadingRateCombiner = enum(u8) {
    Passthrough,
    Override,
    Min,
    Max,
    ApplyRelative,
};

pub const VariableRateShadingState = extern struct {
    enabled: bool = false,
    shadingRate: VariableShadingRate = .e1x1,
    pipelinePrimitiveCombiner: ShadingRateCombiner = .Passthrough,
    imageCombiner: ShadingRateCombiner = .Passthrough,
};

pub const GraphicsPipelineDesc = extern struct {
    primType: PrimitiveType = .TriangleList,
    patchControlPoints: u32 = 0,
    inputLayout: InputLayoutHandle = .{},

    VS: ShaderHandle = .{},
    HS: ShaderHandle = .{},
    DS: ShaderHandle = .{},
    GS: ShaderHandle = .{},
    PS: ShaderHandle = .{},

    renderState: RenderState = .{},
    shadingRateState: VariableRateShadingState = .{},

    bindingLayouts: static_vector(BindingLayoutHandle, c_MaxBindingLayouts) = .{},
};

pub const IGraphicsPipeline = opaque {};

pub const IBindingLayout = opaque {};
pub const IBuffer = opaque {
    extern fn c_nvrhi_buffer_getDesc(*const IBuffer) *const BufferDesc;

    pub fn getDesc(texture: *const IBuffer) *const BufferDesc {
        return c_nvrhi_buffer_getDesc(texture);
    }
};
pub const IDevice = opaque {
    extern fn c_nvrhi_device_createHandleForNativeTexture(
        *IDevice,
        *TextureHandle,
        ObjectType,
        Object,
        *const TextureDesc,
    ) void;
    extern fn c_nvrhi_device_createHandleForNativeBuffer(
        device: *IDevice,
        handle: *BufferHandle,
        object_type: ObjectType,
        buffer: Object,
        desc: *const BufferDesc,
    ) void;
    extern fn c_nvrhi_device_runGarbageCollection(*IDevice) void;
    extern fn c_nvrhi_device_waitForIdle(*IDevice) void;
    extern fn c_nvrhi_device_executeCommandList(*IDevice, *ICommandList) void;
    extern fn c_nvrhi_device_createCommandList(
        *IDevice,
        *CommandListHandle,
        CommandListParameters,
    ) void;
    extern fn c_nvrhi_device_createEventQuery(*IDevice, *EventQueryHandle) void;
    extern fn c_nvrhi_device_setEventQuery(*IDevice, *IEventQuery, CommandQueue) void;
    extern fn c_nvrhi_device_createBuffer(
        *IDevice,
        *BufferHandle,
        *const BufferDesc,
    ) void;
    extern fn c_nvrhi_device_createFramebuffer(
        *IDevice,
        *FramebufferHandle,
        *const FramebufferDesc,
    ) void;
    extern fn c_nvrhi_device_createShader(
        *IDevice,
        *ShaderHandle,
        *const ShaderDesc,
        *const anyopaque,
        usize,
    ) void;
    extern fn c_nvrhi_device_createBindingSet(
        *IDevice,
        *BindingSetHandle,
        *const BindingSetDesc,
        *IBindingLayout,
    ) void;
    extern fn c_nvrhi_device_createBindingLayout(
        *IDevice,
        *BindingLayoutHandle,
        *const BindingLayoutDesc,
    ) void;
    extern fn c_nvrhi_device_createSampler(
        *IDevice,
        *SamplerHandle,
        *const SamplerDesc,
    ) void;
    extern fn c_nvrhi_device_createTexture(
        *IDevice,
        *TextureHandle,
        *const TextureDesc,
    ) void;
    extern fn c_nvrhi_device_createInputLayout(
        *IDevice,
        *InputLayoutHandle,
        [*]const VertexAttributeDesc,
        u32,
        ?*IShader,
    ) void;
    extern fn c_nvrhi_device_createGraphicsPipeline(
        *IDevice,
        *GraphicsPipelineHandle,
        *const GraphicsPipelineDesc,
        *IFramebuffer,
    ) void;

    pub fn runGarbageCollection(device: *IDevice) void {
        c_nvrhi_device_runGarbageCollection(device);
    }

    pub fn executeCommandList(device: *IDevice, command_list_ptr: *ICommandList) void {
        c_nvrhi_device_executeCommandList(device, command_list_ptr);
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createBindingSet(
        device: *IDevice,
        desc: *const BindingSetDesc,
        layout: *IBindingLayout,
    ) BindingSetHandle {
        var handle = BindingSetHandle{};
        c_nvrhi_device_createBindingSet(device, &handle, desc, layout);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createGraphicsPipeline(
        device: *IDevice,
        desc: *const GraphicsPipelineDesc,
        fb: *IFramebuffer,
    ) GraphicsPipelineHandle {
        var handle = GraphicsPipelineHandle{};
        c_nvrhi_device_createGraphicsPipeline(device, &handle, desc, fb);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createCommandList(device: *IDevice, params: CommandListParameters) CommandListHandle {
        var handle = CommandListHandle{};
        c_nvrhi_device_createCommandList(device, &handle, params);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createBuffer(device: *IDevice, desc: *const BufferDesc) BufferHandle {
        var handle = BufferHandle{};
        c_nvrhi_device_createBuffer(device, &handle, desc);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createSampler(device: *IDevice, desc: *const SamplerDesc) SamplerHandle {
        var handle = SamplerHandle{};
        c_nvrhi_device_createSampler(device, &handle, desc);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createTexture(device: *IDevice, desc: *const TextureDesc) TextureHandle {
        var handle = TextureHandle{};
        c_nvrhi_device_createTexture(device, &handle, desc);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createBindingLayout(device: *IDevice, desc: *const BindingLayoutDesc) BindingLayoutHandle {
        var handle = BindingLayoutHandle{};
        c_nvrhi_device_createBindingLayout(device, &handle, desc);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createShader(device: *IDevice, desc: *const ShaderDesc, binary: []const u8) ShaderHandle {
        var handle = ShaderHandle{};
        c_nvrhi_device_createShader(device, &handle, desc, binary.ptr, binary.len);

        return handle;
    }

    /// increases ref count
    /// should call handle.deinit on resource release
    pub fn createEventQuery(device: *IDevice) EventQueryHandle {
        var handle = EventQueryHandle{};
        c_nvrhi_device_createEventQuery(device, &handle);

        return handle;
    }

    pub fn createInputLayout(
        device: *IDevice,
        descs: []const VertexAttributeDesc,
        shader_ptr: ?*IShader,
    ) InputLayoutHandle {
        var handle = InputLayoutHandle{};
        c_nvrhi_device_createInputLayout(
            device,
            &handle,
            descs.ptr,
            @intCast(descs.len),
            shader_ptr,
        );

        return handle;
    }

    pub fn createFramebuffer(
        device: *IDevice,
        desc: *const FramebufferDesc,
    ) FramebufferHandle {
        var handle = FramebufferHandle{};
        c_nvrhi_device_createFramebuffer(
            device,
            &handle,
            desc,
        );

        return handle;
    }

    pub fn createHandleForNativeTexture(
        device: *IDevice,
        object_type: ObjectType,
        object: Object,
        desc: *const TextureDesc,
    ) TextureHandle {
        var handle = TextureHandle{};
        c_nvrhi_device_createHandleForNativeTexture(
            device,
            &handle,
            object_type,
            object,
            desc,
        );

        return handle;
    }

    pub fn createHandleForNativeBuffer(
        device: *IDevice,
        object_type: ObjectType,
        buffer: Object,
        desc: *const BufferDesc,
    ) BufferHandle {
        var handle = BufferHandle{};
        c_nvrhi_device_createHandleForNativeBuffer(
            device,
            &handle,
            object_type,
            buffer,
            desc,
        );

        return handle;
    }

    pub fn waitForIdle(device: *IDevice) void {
        return c_nvrhi_device_waitForIdle(device);
    }

    pub fn setEventQuery(
        device: *IDevice,
        query: *IEventQuery,
        command_queue: CommandQueue,
    ) void {
        c_nvrhi_device_setEventQuery(device, query, command_queue);
    }
};

pub const CommandQueue = enum(u8) {
    Graphics = 0,
    Compute,
    Copy,
    Count,
};

pub const CommandListParameters = extern struct {
    // A command list with enableImmediateExecution = true maps to the immediate context on DX11.
    // Two immediate command lists cannot be open at the same time, which is checked by the validation layer.
    enableImmediateExecution: bool = true,
